--- a/src/app/Common/feedback-a/feedback-a.component.html
+++ b/src/app/Common/feedback-a/feedback-a.component.html
@@ -1,34 +1,22 @@
 <div style="border-bottom: 1px solid #f7f7f7;
 overflow: hidden;
 padding: 5px 0px;
-">
+" *ngFor="let rat of rating">
     <div class="">
         <div class="row" style="margin-left:0px;margin-right: 0px;">
             <div class="TotalHeading">
-                <span class="topic-head-small-2">Topic Heading</span>
-                <span class="topic-desc-small-1" style="display:block">1Date / Time</span>
+                <span class="topic-head-small-2 wordbreak" style="word-break: break-word !important;
+                display: -webkit-box !important;
+                -webkit-line-clamp: 1 !important;
+                -webkit-box-orient: vertical !important;
+                overflow: hidden !important;
+                text-overflow: ellipsis !important; ">{{rat.web_name}}</span>
+                <span class="topic-desc-small-1" style="display:block"> {{rat.web_rating}} <i class="far fa-star"></i>
+                </span>
             </div>
 
         </div>
 
     </div>
-    <div style="padding:5px 0px">
-        <input type="button" class="rate-small" value="Rate" />
-    </div>
-</div>
-<div style="border-bottom: 1px solid #f7f7f7;
-overflow: hidden;
-padding: 5px 0px;
-">
-    <div class="">
-        <div class="row" style="margin-left:0px;margin-right: 0px;">
-            <div class="TotalHeading">
-                <span class="topic-head-small-2">Topic Heading</span>
-                <span class="topic-desc-small-1" style="display:block">1Date / Time</span>
-            </div>
 
-        </div>
-
-    </div>
-    <div style="padding:5px 0px"><input type="button" class="rate-small" value="Rate" /></div>
 </div>
