--- a/src/app/Common/online-class-e/online-class-e.component.html
+++ b/src/app/Common/online-class-e/online-class-e.component.html
@@ -6,7 +6,7 @@
               <div style="display: block;">
                   <span class="onlineTopicHeading">Master 'Reading Skills' for CBSE 10th Board</span>
               </div>
-              <div style="display: block;margin-top: 15px;
+              <div class="descriptionshort" style="display: block;margin-top: 15px;
       margin-bottom: 15px;
       line-height: 1.75;">
                   <span class="onlineTopicDescription">
