--- a/src/app/Institution/Card/inst-badges-card/inst-badges-card.component.html
+++ b/src/app/Institution/Card/inst-badges-card/inst-badges-card.component.html
@@ -1,6 +1,6 @@
 <div class="card100">
     <div class="card100-heading">
-        <h5 class="Black"> Topics</h5>
+        <span class="F16 Bold LightBlack"><i class="fas fa-hashtag" style="color: #247ba0;;margin-right: 10px"></i>Trending</span>
     </div>
     <div class="card100-content">
         <!--<div class="col-md-8"> -->
