--- a/src/app/Institution/Card/inst-post-list-b/inst-post-list-b.component.html
+++ b/src/app/Institution/Card/inst-post-list-b/inst-post-list-b.component.html
@@ -1,6 +1,6 @@
 <div class="card100">
     <div style="padding: 1.5rem;border-bottom: none;">
-        <h5 class="Black"> Webinars</h5>
+        <h5 class="Black">Today Webinars</h5>
     </div>
     <div class="card100-body">
         <!--<div class="col-md-8"> -->
@@ -8,7 +8,7 @@
             <tr *ngFor="let post of PostDetails" (click)="GoToWebuinar(1)">
                 <td>
                     <span class="F12" style="display: block;">06:45AM</span>
-                    <span class="F12">12-Aug-20</span>
+                    <!-- <span class="F12">12-Aug-20</span> -->
                 </td>
                 <td>
                     <span class="F12" style="display: block;">WEB123689</span>
