--- a/src/app/Institution/Page/activity-page/activity-page.component.html
+++ b/src/app/Institution/Page/activity-page/activity-page.component.html
@@ -1,26 +1,26 @@
-<div class="col-md-12 ani-from-bottom">
-  <div class="row container" style="margin-bottom: 30px;">
+<div class="ani-from-bottom">
+  <div class="row " style="margin-bottom: 10px;">
 
     <div class="col-md-3">
-      <div class="boxshadowcard2">
+      <div class="boxshadowcard2" style="background-color: white;">
         <span class="ResultSpan">42</span>
         <span class="F12 LightBlack" style="display: block;">Conducted Web.</span>
       </div>
     </div>
     <div class="col-md-3">
-      <div class="boxshadowcard2">
+      <div class="boxshadowcard2" style=" background-color: white;">
         <span class="ResultSpan">6</span>
         <span class="F12 LightBlack" style="display: block;">Scheduled Web.</span>
       </div>
     </div>
     <div class="col-md-3">
-      <div class="boxshadowcard2">
+      <div class="boxshadowcard2" style="background-color: white;">
         <span class="ResultSpan">36</span>
         <span class="F12 LightBlack" style="display: block;">Completed Web.</span>
       </div>
     </div>
     <div class="col-md-3">
-      <div class="boxshadowcard2">
+      <div class="boxshadowcard2" style="background-color: white;">
         <span class="ResultSpan">1300</span>
         <span class="F12 LightBlack" style="display: block;">Seats Filled</span>
       </div>
