--- a/src/app/Institution/Page/ins-wall/ins-wall.component.html
+++ b/src/app/Institution/Page/ins-wall/ins-wall.component.html
@@ -1,4 +1,8 @@
 <div class="ani-from-bottom" style="margin-top:20px;">
+
+
+    <app-ins-wall-analytics-a></app-ins-wall-analytics-a>
+
     <!-- <app-banner></app-banner> -->
     <div class="row">
         <!-- <div class="col-md-3">
@@ -13,6 +17,15 @@
         </div>
         <div class="col-md-3">
             <app-inst-badges-card></app-inst-badges-card>
+
+            <div class="card100" id="">
+                <div class="card100-heading">
+                    <span class="F16 Bold LightBlack"><i class="fas fa-star-half-alt" style="color: #247ba0;;margin-right: 10px"></i>Feedback</span>
+                </div>
+                <div class="card100-content">
+                    <app-feedback-a></app-feedback-a>
+                </div>
+            </div>
             <!-- <app-iwall-performance></app-iwall-performance> -->
         </div>
     </div>
