--- a/src/app/Page/online-class-details-a/online-class-details-a.component.html
+++ b/src/app/Page/online-class-details-a/online-class-details-a.component.html
@@ -29,82 +29,99 @@ display: flex;">
         </div>
       </div>
     </div>
+
     <div class="d-flex" style="margin-bottom: 15px;">
       <div class="p-2 mr-auto" style="display: block;padding-left: 0px !important;">
         <span class="onlineTopicHeading">Master 'Reading Skills' for CBSE 10th Board</span>
       </div>
-
     </div>
-    <div class="d-flex" style="margin-top: 15px;">
-      <div class="flex-fill">
-        <span class="onlineSubHeading2" style="display: block;">when</span>
-        <span class="onlineSubDescription2">3-Jun 16:30 PM,30 Mins</span>
-      </div>
-      <div class="flex-fill">
-        <span class="onlineSubHeading2" style="display: block;">Participant</span>
-        <span class="onlineSubDescription2">15 out 15 available</span>
-      </div>
-    </div>
+    <div class="card100">
+      <div class="card100-content">
 
 
 
-    <div class="d-flex">
-      <div class="">
-        <div style="display: block;margin-top: 15px;
+        <div class="d-flex" style="margin-top: 15px;">
+          <div class="flex-fill">
+            <span class="onlineSubHeading2" style="display: block;">when</span>
+            <span class="onlineSubDescription2">3-Jun 16:30 PM,30 Mins</span>
+          </div>
+          <div class="flex-fill">
+            <span class="onlineSubHeading2" style="display: block;">Participant</span>
+            <span class="onlineSubDescription2">15 out 15 available</span>
+          </div>
+        </div>
+
+
+
+        <div class="d-flex">
+          <div class="">
+            <div style="display: block;margin-top: 15px;
         margin-bottom: 15px;
         line-height: 2.25;">
-          <span class="onlineSubHeading2" style="display: block;">Course Detail</span>
-          <span class="onlineTopicDescription">
+              <span class="onlineSubHeading2" style="display: block;">Course Detail</span>
+              <span class="onlineTopicDescription">
 
-            <ul style=" list-style-type: none;
+                <ul style=" list-style-type: none;
             margin: 0;
             padding: 0;">
-              <li style="font-size: 13px;">Understand Kirchhoff's Current Law in this Live session</li>
-              <li style="font-size: 13px;">Learn to apply KCL and KVL in an Electrical Circuit</li>
-              <li style="font-size: 13px;">Understand Kirchhoff's Voltage Law with some simple examples
-              </li>
-              <li style="font-size: 13px;">Clear your doubts with Subject Expert Hemant Sir</li>
-            </ul>
-          </span>
-        </div>
-        <div style="margin-top: 15px;">
-          <app-topic-badges-b></app-topic-badges-b>
-        </div>
-        <div style="margin-top: 15px;">
-          <div class="row">
-            <div class="flex-fill">
-              <div class="d-flex">
-                <div class="p-2">
-                  <img src="../../../assets/Image/elonmusk1.jpg" style="width: 64px;height:64px;border-radius: 10px;">
-                </div>
-                <div class="p-2 flex-grow-1">
-                  <span class="onlineSubHeading" style="display: block;">Organiser</span>
-                  <span class="tutorname" style="display: block;">S.Bala Krishnan</span>
-                  <div style="display: block;">
-                    <span class="tutordescription">13 Yrs , M.A, B.Ed </span>
-                  </div>
-                </div>
-              </div>
+                  <li style="font-size: 13px;">Understand Kirchhoff's Current Law in this Live session</li>
+                  <li style="font-size: 13px;">Learn to apply KCL and KVL in an Electrical Circuit</li>
+                  <li style="font-size: 13px;">Understand Kirchhoff's Voltage Law with some simple examples
+                  </li>
+                  <li style="font-size: 13px;">Clear your doubts with Subject Expert Hemant Sir</li>
+                </ul>
+              </span>
             </div>
-            <div class="flex-fill">
-              <div class="d-flex">
-                <div class="p-2">
-                  <img src="../../../assets/Image/elonmusk1.jpg" style="width: 64px;height:64px;border-radius: 10px;">
-                </div>
-                <div class="p-2 flex-grow-1">
-                  <span class="onlineSubHeading" style="display: block;">Organiser</span>
-                  <span class="tutorname" style="display: block;">S.Bala Krishnan</span>
-                  <div style="display: block;">
-                    <span class="tutordescription">13 Yrs , M.A, B.Ed </span>
+            <div style="margin-top: 15px;">
+              <app-topic-badges-b></app-topic-badges-b>
+            </div>
+            <div style="margin-top: 15px;line-height: 2.25;">
+              <span class="onlineSubHeading2" style="display: block;">Tutor Details</span>
+              <div style="margin-top: 5px;">
+                <div class="scrollmenu">
+                  <div class="scrollitems">
+                    <div class="d-flex">
+                      <div class="p-1">
+                        <img src="../../../assets/Image/elonmusk1.jpg"
+                          style="width: 48px;height:48px;border-radius: 10px;">
+                      </div>
+                      <div class="p-1 flex-grow-1">
+                        <span class="onlineSubHeading" style="display: block;">Organiser</span>
+                        <span class="tutorname" style="display: block;">S.Bala Krishnan</span>
+                        <div style="display: block;">
+                          <span class="tutordescription">13 Yrs , M.A, B.Ed </span>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="scrollitems">
+                    <div class="d-flex">
+                      <div class="p-1">
+                        <img src="../../../assets/Image/elonmusk1.jpg"
+                          style="width: 48px;height:48px;border-radius: 10px;">
+                      </div>
+                      <div class="p-1 flex-grow-1">
+                        <span class="onlineSubHeading" style="display: block;">Organiser</span>
+                        <span class="tutorname" style="display: block;">S.Bala Krishnan</span>
+                        <div style="display: block;">
+                          <span class="tutordescription">13 Yrs , M.A, B.Ed </span>
+                        </div>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
           </div>
+
         </div>
       </div>
-
     </div>
 
+    <div class="" style="margin-top: 20px;">
+      <div class="d-flex">
+          <img src="../../../assets/Image/web001.jpg" class="img-fluid" alt="Responsive image">
+      </div>
+  </div>
   </div>
 </div>
