--- a/src/app/User/activity/activity.component.html
+++ b/src/app/User/activity/activity.component.html
@@ -1,25 +1,24 @@
 <div>
-    <h4 class="Color">Activity</h4>
+    <h4 class="Color">activity</h4>
 
 
-    <div class="col-md-12  ani-from-bottom">
+    <div class="ani-from-bottom">
 
-        <div class="row container" style="margin-bottom: 30px;">
-
+        <div class="row" style="margin-bottom: 5px;">
             <div class="col-md-3">
-                <div class="boxshadowcard2">
+                <div class="boxshadowcard2" style="background-color: white;">
                     <span class="ResultSpan">24</span>
                     <span class="F12 LightBlack" style="display: block;">Attended Web.</span>
                 </div>
             </div>
             <div class="col-md-3">
-                <div class="boxshadowcard2">
+                <div class="boxshadowcard2" style="background-color: white;">
                     <span class="ResultSpan">3</span>
                     <span class="F12 LightBlack" style="display: block;">Scheduled Web.</span>
                 </div>
             </div>
             <div class="col-md-3">
-                <div class="boxshadowcard2">
+                <div class="boxshadowcard2" style="background-color: white;">
                     <span class="ResultSpan">12</span>
                     <span class="F12 LightBlack" style="display: block;">Pending Request</span>
                 </div>
