--- a/src/app/User/wall-suggestion/wall-suggestion.component.html
+++ b/src/app/User/wall-suggestion/wall-suggestion.component.html
@@ -1,6 +1,7 @@
 <div class="card100" id="">
     <div class="card100-heading">
-        <span class="headings-small">Topics</span>
+        <span class="F16 Bold LightBlack"><i class="fas fa-hashtag"
+                style="color: #247ba0;;margin-right: 10px"></i>Trending</span>
     </div>
     <div class="card100-content">
         <app-topic-badges-a></app-topic-badges-a>
@@ -10,9 +11,11 @@
 
 <div class="card100" id="">
     <div class="card100-heading">
-        <span class="headings-small">Feedback</span>
+        <span class="F16 Bold LightBlack"><i class="far fa-lightbulb"
+                style="color:#247ba0;margin-right: 10px;"></i>Suggested</span>
     </div>
     <div class="card100-content">
-        <app-feedback-a></app-feedback-a>
+        <app-suggest-ins-b></app-suggest-ins-b>
     </div>
 </div>
+
