--- a/src/app/Common/create-post/create-post.component.html
+++ b/src/app/Common/create-post/create-post.component.html
@@ -16,7 +16,7 @@
                 </div>
 
                 <div class="row" style="margin-top: 10px;">
-                    <div class="col-md-4">
+                    <div class="col-lg-4  col-md-12">
                         <div style="display: block;">
                             <span>Date</span>
                         </div>
@@ -34,10 +34,9 @@
                     </div>
 
 
-                    <div class="col-lg-4 ">
+                    <div class="col-lg-4 col-md-12">
                         <span>Duration</span>
-                        <select class="form-control " [(ngModel)]="totalDuration "
-                            (change)="onQuestionCountChange($event.target.value) ">
+                        <select class="form-control " [(ngModel)]="totalDuration">
                             <option value="5 ">15 Mins</option>
                             <option value="10 ">30 Mins</option>
                             <option value="15 ">45 Mins</option>
@@ -97,9 +96,9 @@
                         </select>
                     </div> -->
                 </div>
-                <div class="row" style="margin-top: 15px;">
+                <div class="row" style="margin-top: 20px;">
                     <div class="col-lg-12" style="margin-top: auto;">
-                        <span style="display: block;">Add Topics</span>
+                        <span style="display: block;">Add Topics <span style="font-size: 10px;"> max 5 topics</span></span>
 
                         <div style="margin-top: 10px;margin-bottom: 10px;">
                             <span class="filter-text" *ngFor="let fls of filters">
@@ -126,32 +125,32 @@
                         </div>
                     </div>
                 </div>
-                <div class="row" style="margin-top: 15px;">
+                <div class="row" style="margin-top: 20px;">
                     <div class="col-md-12">
-                    <span style="display: block;">Organisers</span> <button type="button" class="btn regisbutn-small"
-                        (click)="openModal('custom-modal-1')">Add</button>
+                        <span style="display: block;">Organisers</span> <button type="button"
+                            class="btn regisbutn-small" (click)="openModal('custom-modal-1')">Add</button>
                     </div>
                 </div>
-                <div class="row" style="margin-top: 15px;">
-                    <div class="col-md-4" *ngFor="let organiserList of Addedorganisers">
+                <div class="row" style="margin-top: 20px;">
+                    <div class="col-md-6 col-lg-4" *ngFor="let organiserList of Addedorganisers">
                         <div class="card noborder">
                             <div class="d-flex">
-                                <div class="p-2">
+                                <div class="p-1">
                                     <img src="../../../assets/Image/elonmusk1.jpg"
-                                        style="width: 72px;height:72px;border-radius: 10px;">
+                                        style="width: 48px;height:48px;border-radius: 10px;">
                                 </div>
-                                <div class="p-2 flex-grow-1">
-                                    <span class="F10" style="display: block;">{{organiserList.type}}</span>
-                                    <span class="F14" style="display: block;">{{organiserList.name}}</span>
-                                    <div style="display: block;">
-                                        <span class="F12">{{organiserList.brief}} </span>
+                                <div class="p-1 flex-grow-1">
+                                    <span class="F10 LightBlack" style="display: block;">{{organiserList.type}}</span>
+                                    <span class="F12 Black" style="display: block;">{{organiserList.name}}</span>
+                                    <div style="display: block;margin-top: -5px;">
+                                        <span class="F10 LightBlack">{{organiserList.brief}} </span>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="row" style="margin-top: 15px;">
+                <div class="row" style="margin-top: 20px;">
                     <div class="col-lg-4" style="margin-top: auto;">
                         <span style="display: block;">Fee</span>
                         <div class="box">
@@ -174,7 +173,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="row" style="margin-top: 15px;">
+                <div class="row" style="margin-top: 20px;">
                     <div class="col-lg-4" style="margin-top: auto;">
                         <span style="display: block;">Participant Count</span>
                         <div class="box">
@@ -202,7 +201,7 @@
                         <button class="btn btn-success btnPost">Post</button>
                     </div>
                 </div>
-            </div>          
+            </div>
         </div>
 
 
@@ -221,7 +220,7 @@
     </div>
     <div style="display: block;" style="margin-top: 10px;">
         <span style="display: block;">Type: </span>
-        <select class="form-control " [(ngModel)]="organTempType">
+        <select class="form-control " [(ngModel)]="organTemp.Type">
             <option value="1 ">Organiser</option>
             <option value="2 ">Host</option>
             <option value="3 ">Speaker</option>
@@ -230,11 +229,11 @@
 
     <div style="display: block;" style="margin-top: 10px;">
         <span style="display: block;">Name: </span>
-        <input class="form-control" type="text" [(ngModel)]="organTempName" />
+        <input class="form-control" type="text" [(ngModel)]="organTemp.Name" />
     </div>
     <div style="display: block;" style="margin-top: 10px;">
         <span style="display: block;">brief: </span>
-        <input class="form-control" type="text" [(ngModel)]="organTempBrief" />
+        <input class="form-control" type="text" [(ngModel)]="organTemp.Brief" />
     </div>
 
     <div class="d-flex flex-row-reverse" style="margin-top:20px ;">
@@ -244,21 +243,3 @@
     </div>
 
 </modal-a>
-
-<div id="myModal" *ngIf="ShowModal" class="modal">
-
-    <!-- Modal content -->
-    <div class="modal-content">
-        <p>Some text in the Modal..</p>
-        <app-online-class-e></app-online-class-e>
-    </div>
-
-</div>
-
-<div id="addOrganisers" *ngIf="addOrganisersShowModal" class="modal">
-    <!-- Modal content -->
-    <div class="modal-content">
-        <p>Some text in the Modal..</p>
-    </div>
-
-</div>
