--- a/src/app/Common/institution-card-b/institution-card-b.component.html
+++ b/src/app/Common/institution-card-b/institution-card-b.component.html
@@ -1,17 +1,24 @@
-<div class="" style="margin-bottom:5px">
-    <input type="text" placeholder="Search Topics" class="form-control" [(ngModel)]="SearchFollowers">
+<div class="" style="margin-bottom:5px;margin-top: 15px;padding: 5px;justify-content: center;">
+    <input style="border: none;
+    border-radius: 0px;
+    border-bottom: 1px solid #247ba0;
+    width: 90%;
+    margin-right: auto;
+    margin-left: auto;" type="text" placeholder="Search here..." class="form-control" [(ngModel)]="SearchFollowers" />
 </div>
-<div class="">
-    <div class="col-md-12" *ngFor="let PremInstList of Institution | search:'InstitutionName':SearchFollowers" style="margin-bottom:5px">
-        <div class="">
-            <div class="d-flex mb-3">
-                <div class="p-2 flex-grow-1">
+<div class="row" style="margin-top: 20px;">
+    <div class="col-sm-12 col-md-4 col-lg-3"
+        *ngFor="let PremInstList of Institution | search:'InstitutionName':SearchFollowers" style="margin-bottom:5px">
+        <div class="boxshadowcard">
+            <div class="flex-column" style="text-align: center;">
+                <div class="p-2">
                     <span style="display: block;">Topic Name</span>
                     <span class="topicfollowercount"> Followers: {{PremInstList.UsersCount}}</span>
                 </div>
 
                 <div class="p-2">
-                    <input type="button" value="Unfollow" class="regisbutn-small" />
+                    <button type="button" value="" class="unlike-small">
+                        <i class="far fa-thumbs-down"></i></button>
                 </div>
 
             </div>
