--- a/src/app/Common/online-class-d/online-class-d.component.css
+++ b/src/app/Common/online-class-d/online-class-d.component.css
@@ -1,3 +1,12 @@
+.descriptionshort {
+    line-height: 1.5em;
+    height: 3em;
+    overflow: hidden;
+    white-space: normal;
+    text-overflow: ellipsis;
+    width: 100%;
+}
+
 tr.tabletd td {
     padding: 0.45rem !important;
     vertical-align: top;
@@ -8,29 +17,32 @@ tr.tabletd td {
 .boldtd {
     font-weight: 600;
 }
-.statusspan{
+
+.statusspan {
     text-align: center;
-        font-size: 12px;
-        color: white;
-        float: right;
-        padding: 2px 5px;
+    font-size: 12px;
+    color: white;
+    float: right;
+    padding: 2px 5px;
 }
+
 .onlineTopicHeading {
     color: #3D3D3D;
     font-weight: 500;
     font-size: 18px;
 }
-.boxshadowcard2{
+
+.boxshadowcard2 {
     box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
     margin-bottom: 15px;
     padding: 15px 10px;
 }
 
-.boxshadowcard2:hover{
+.boxshadowcard2:hover {
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
     margin-bottom: 15px;
-   
 }
+
 .onlineTopicHeading:hover {
     color: #2A8CB7 !important;
     font-weight: 500;
@@ -42,14 +54,17 @@ tr.tabletd td {
     font-weight: 500;
     font-size: 15px;
 }
-.tutorname{
-    font-size: 14px;
+
+.tutorname {
+    font-size: 12px;
     color: #3D3D3D;
 }
+
 .tutordescription {
     color: #5c5c5c;
-    font-size: 12px;
+    font-size: 10px;
 }
+
 .onlineSubDescription {
     color: #3D3D3D;
     font-size: 13px;
@@ -57,8 +72,9 @@ tr.tabletd td {
 
 .onlineSubHeading {
     color: #5c5c5c;
-    font-size: 15px;
+    font-size: 10px;
 }
+
 .onlineSubDescription2 {
     color: #5c5c5c;
     font-size: 13px;
@@ -69,10 +85,16 @@ tr.tabletd td {
     font-size: 12px;
 }
 
-
-
 .QuesLinkBrief {
     color: #5c5c5c;
+    font-size: 12px;
+}
+
+.Recommended-Badge {
+    background-color: #facc6b;
+    background-image: linear-gradient(315deg, #facc6b 0%, #fabc3c 74%);
+    padding: 5px 10px;
+    border-radius: 5px;
     font-size: 12px;
 }
 
@@ -82,18 +104,6 @@ tr.tabletd td {
     box-shadow: 0px 0px 9px 1px rgba(237, 237, 237, 1);
     margin-bottom: 15px;
 }
-
-.regisbutn {
-    border: none;
-    background-color: #247ba0;
-    color: white;
-    padding: 5px 15px;
-    font-weight: 500;
-    border-radius: 10px;
-    box-shadow: 0px 2px 5px #b6b6b6;
-}
-
-
 
 .regisbutn-small {
     border: none;
@@ -136,7 +146,6 @@ tr.tabletd td {
     font-weight: 500;
 }
 
-
 /* The Modal (background) */
 
 .modalpop {
@@ -171,7 +180,6 @@ tr.tabletd td {
     /* Hidden by default */
 }
 
-
 /* Modal Content */
 
 .modal-content {
@@ -181,7 +189,6 @@ tr.tabletd td {
     border: 1px solid #888;
     max-width: 520px;
 }
-
 
 /* The Close Button */
 
@@ -193,9 +200,46 @@ tr.tabletd td {
     margin-left: auto;
 }
 
-.close:hover,
-.close:focus {
+.close:hover, .close:focus {
     color: #000;
     text-decoration: none;
     cursor: pointer;
+}
+
+.apply {
+    width: 45px;
+    background: #247ba0;
+    transition: width 1s;
+    border-radius: 20px;
+}
+
+.apply i {
+    font-size: 24px;
+}
+
+.apply span {
+    font-size: 0px;
+}
+
+.apply {
+    transition-timing-function: ease;
+}
+
+.apply:hover i {
+    font-size: 14px;
+}
+
+.apply:hover {
+    width: 80px;
+    margin-left: 0px;
+}
+
+.apply:hover span {
+    transition-delay: margin-right 1s;
+    font-size: 14px;
+    padding-left: 5px;
+    -webkit-transition: color 1s, font-size 2s;
+    -moz-transition: color 1s, font-size 2s;
+    -o-transition: color 1s, font-size 2s;
+    transition: color 1s, font-size 2s;
 }
