--- a/src/app/Common/online-class-details-b/online-class-details-b.component.css
+++ b/src/app/Common/online-class-details-b/online-class-details-b.component.css
@@ -9,6 +9,17 @@ tr.tabletd td {
     font-weight: 600;
 }
 
+.tutorname {
+    font-size: 12px;
+    color: #3D3D3D;
+}
+
+.tutordescription {
+    color: #5c5c5c;
+    font-size: 10px;
+    margin-top: -5px;
+}
+
 .onlineTopicHeading {
     color: #3D3D3D;
     font-weight: 500;
@@ -19,6 +30,16 @@ tr.tabletd td {
     color: #2e2e2e;
     font-weight: 500;
     font-size: 15px;
+}
+
+.onlineSubDescription2 {
+    color: #5c5c5c;
+    font-size: 13px;
+}
+
+.onlineSubHeading2 {
+    color: #c0c0c0;
+    font-size: 12px;
 }
 
 .onlineSubDescription {
@@ -42,8 +63,6 @@ tr.tabletd td {
     box-shadow: 0px 0px 9px 1px rgba(237, 237, 237, 1);
     margin-bottom: 15px;
 }
-
-
 
 .regismore {
     width: 100%;
