--- a/src/app/Common/online-class-details-b/online-class-details-b.component.html
+++ b/src/app/Common/online-class-details-b/online-class-details-b.component.html
@@ -11,92 +11,124 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-md-8" style="padding:15px;">
-
-            <div class="d-flex">
-
-                <div class="flex-fill">
-                    <span class="onlineSubHeading" style="display: block;">Date</span>
-                    <span class="onlineSubDescription">3-Jun 16:30 PM</span>
+        <div class="col-md-8 ">
+            <div class="card100" style="padding:15px;">
+                <div class="d-flex">
+                    <div class="col-md-4">
+                        <span class="onlineSubHeading" style="display: block;">Date</span>
+                        <span class="onlineSubDescription">3-Jun 16:30 PM</span>
+                    </div>
+                    <div class="col-md-4">
+                        <span class="onlineSubHeading" style="display: block;">Duration</span>
+                        <span class="onlineSubDescription">30 Mins</span>
+                    </div>
+                    <div class="col-md-4">
+                        <span class="onlineSubHeading" style="display: block;">Language</span>
+                        <span class="onlineSubDescription">Eng/Tamil</span>
+                    </div>
                 </div>
-                <div class="flex-fill">
-                    <span class="onlineSubHeading" style="display: block;">Duration</span>
-                    <span class="onlineSubDescription">30 Mins</span>
-                </div>
-                <div class="flex-fill">
-                    <span class="onlineSubHeading" style="display: block;">Language</span>
-                    <span class="onlineSubDescription">Eng/Tamil</span>
-                </div>
-
-
-
-                <div class="flex-fill">
-                    <span class="onlineSubHeading" style="display: block;">Room Size</span>
-                    <span class="onlineSubDescription">15 Max</span>
-                </div>
-                <div class="flex-fill">
-                    <span class="onlineSubHeading" style="display: block;">Fees</span>
-                    <span class="onlineSubDescription">15Rs /-</span>
-                </div>
-                <div class="flex-fill">
-                    <span class="onlineSubHeading" style="display: block;">Platform</span>
-                    <span class="onlineSubDescription">Zoom</span>
-                </div>
-                <!-- <div>
+                <div class="d-flex" style="margin-top: 25px;">
+                    <div class="col-md-4">
+                        <span class="onlineSubHeading" style="display: block;">Room Size</span>
+                        <span class="onlineSubDescription">15 Max</span>
+                    </div>
+                    <div class="col-md-4">
+                        <span class="onlineSubHeading" style="display: block;">Fees</span>
+                        <span class="onlineSubDescription">15Rs /-</span>
+                    </div>
+                    <div class="col-md-4">
+                        <span class="onlineSubHeading" style="display: block;">Platform</span>
+                        <span class="onlineSubDescription">Zoom</span>
+                    </div>
+                    <!-- <div>
         <input type="button" class="btn" value="view" />
       </div> -->
 
-            </div>
+                </div>
 
-            <div class="d-flex">
-                <div class="">
-                    <div style="display: block;margin-top: 15px;
+                <div class="d-flex">
+                    <div class="">
+                        <div style="display: block;margin-top: 15px;
         margin-bottom: 15px;
         line-height: 2.25;">
-                        <span class="onlineSubHeading" style="display: block;">Course Detail</span>
-                        <span class="onlineTopicDescription">
+                            <span class="onlineSubHeading2" style="display: block;">Course Detail</span>
+                            <span class="onlineTopicDescription">
 
-                            <ul style=" list-style-type: none;
+                                <ul style=" list-style-type: none;
             margin: 0;
             padding: 0;">
-                                <li style="font-size: 13px;">Understand Kirchhoff's Current Law in this Live session
-                                </li>
-                                <li style="font-size: 13px;">Learn to apply KCL and KVL in an Electrical Circuit</li>
-                                <li style="font-size: 13px;">Understand Kirchhoff's Voltage Law with some simple
-                                    examples</li>
-                                <li style="font-size: 13px;">Clear your doubts with Subject Expert Hemant Sir</li>
-                            </ul>
-                        </span>
-                    </div>
+                                    <li style="font-size: 13px;">Understand Kirchhoff's Current Law in this Live session
+                                    </li>
+                                    <li style="font-size: 13px;">Learn to apply KCL and KVL in an Electrical Circuit
+                                    </li>
+                                    <li style="font-size: 13px;">Understand Kirchhoff's Voltage Law with some simple
+                                        examples</li>
+                                    <li style="font-size: 13px;">Clear your doubts with Subject Expert Hemant Sir</li>
+                                </ul>
+                            </span>
+                        </div>
 
-                    <div style="margin-top: 15px;line-height: 2.25;">
-                        <span class="onlineSubHeading" style="display: block;">Tutor Detail</span>
-                        <span style="display: block;">S.Bala Krishnan <span class="QuesLinkDescription">13 Yrs , </span>
-                            <span class="QuesLinkDescription">M.A, B.Ed</span>
-                        </span>
-
-                        <ul style=" list-style-type: none;margin: 0;padding: 0;line-height: 2.25;">
-                            <li style="font-size: 13px;">13 years of Experience in NEET, JEE Maths</li>
-                            <li style="font-size: 13px;">Taught and Mentored more 100+ students</li>
-                            <li style="font-size: 13px;">Understand Kirchhoff's Voltage Law with some simple examples
-                            </li>
-                            <li style="font-size: 13px;">Guided 100s of students to score 100% in Mathematics</li>
-                        </ul>
+                        <div style="margin-top: 15px;line-height: 2.25;">
+                            <span class="onlineSubHeading2" style="display: block;">Tutor Details</span>
+                            <div style="margin-top: 5px;">
+                                <div class="scrollmenu">
+                                    <div class="scrollitems">
+                                        <div class="d-flex">
+                                            <div class="p-2">
+                                                <img src="../../../assets/Image/elonmusk1.jpg"
+                                                    style="width: 48px;height:48px;border-radius: 10px;">
+                                            </div>
+                                            <div class="p-2 flex-grow-1">
+                                                <span class="onlineSubHeading" style="display: block;">Organiser</span>
+                                                <span class="tutorname" style="display: block;">S.Bala Krishnan</span>
+                                                <div style="display: block;">
+                                                    <span class="tutordescription">13 Yrs , M.A, B.Ed </span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="scrollitems">
+                                        <div class="d-flex">
+                                            <div class="p-2">
+                                                <img src="../../../assets/Image/elonmusk1.jpg"
+                                                    style="width: 48px;height:48px;border-radius: 10px;">
+                                            </div>
+                                            <div class="p-2 flex-grow-1">
+                                                <span class="onlineSubHeading" style="display: block;">Organiser</span>
+                                                <span class="tutorname" style="display: block;">S.Bala Krishnan</span>
+                                                <div style="display: block;">
+                                                    <span class="tutordescription">13 Yrs , M.A, B.Ed </span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
+
+
+
             </div>
 
-
+            <div class="card100" style="margin-top: 20px;">
+                <div class="d-flex">
+                    <img src="../../../assets/Image/web001.jpg" class="img-fluid" alt="Responsive image">
+                </div>
+            </div>
         </div>
         <div class="col-md-4">
-            <div style="padding:15px">
-                <div id="feedback">
-                    <div>
-                        <span class="" style="font-size: 14px;color: #5d5d5d;">Participant Request [15/30]</span>
+            <div class="card100">
+                <div style="padding:15px">
+                    <div id="feedback">
+                        <div>
+                            <span class="" style="font-size: 14px;color: #5d5d5d;">Participant Request [15/30]</span>
+                        </div>
+                        <app-participant-request-a></app-participant-request-a>
                     </div>
-                    <app-participant-request-a></app-participant-request-a>
-                </div>
 
+                </div>
             </div>
         </div>
     </div>
