--- a/src/app/Common/online-class-e/online-class-e.component.css
+++ b/src/app/Common/online-class-e/online-class-e.component.css
@@ -1,3 +1,19 @@
+.descriptionshort {
+    line-height: 1.5em;
+    /* Sets line height to 1.5 times text size */
+    height: 3em;
+    /* Sets the div height to 2x line-height (3 times text size) */
+    width: 100%;
+    /* Use whatever width you want */
+    white-space: normal;
+    /* Wrap lines of text */
+    overflow: hidden;
+    /* Hide text that goes beyond the boundaries of the div */
+    text-overflow: ellipsis;
+    /* Ellipses (cross-browser) */
+    -o-text-overflow: ellipsis;
+}
+
 tr.tabletd td {
     padding: 0.45rem !important;
     vertical-align: top;
@@ -53,7 +69,6 @@ tr.tabletd td {
     margin-bottom: 15px;
 }
 
-
 /* The Modal (background) */
 
 .modalpop {
@@ -88,7 +103,6 @@ tr.tabletd td {
     /* Hidden by default */
 }
 
-
 /* Modal Content */
 
 .modal-content {
@@ -98,7 +112,6 @@ tr.tabletd td {
     border: 1px solid #888;
     max-width: 520px;
 }
-
 
 /* The Close Button */
 
@@ -110,10 +123,8 @@ tr.tabletd td {
     margin-left: auto;
 }
 
-.close:hover,
-.close:focus {
+.close:hover, .close:focus {
     color: #000;
     text-decoration: none;
     cursor: pointer;
 }
-
