--- a/src/app/Common/topic-badges-a/topic-badges-a.component.html
+++ b/src/app/Common/topic-badges-a/topic-badges-a.component.html
@@ -1,6 +1,6 @@
 <!--<div class="col-md-8"> -->
 <div class="d-flex" style="margin-bottom: 5px;" *ngFor="let top of topiclist">
-    <span class="topiclist F12">{{top}}</span>
+    <span class="LightBlack F14" style="padding:2px 0px;">{{top}}</span>
 </div>
 <!-- <app-ipost [data]="post"></app-ipost> -->
 <!-- </div> -->
