--- a/src/app/Common/topic-badges-b/topic-badges-b.component.css
+++ b/src/app/Common/topic-badges-b/topic-badges-b.component.css
@@ -42,7 +42,7 @@ a.AddMemmber {
 }
 
 .topiclist {
-    background-color: #e0e0e0;
+    background-color: #f7f7f7;
     padding: 5px 15px;
     color: #5c5c5c;
     border-radius: 15px;
