--- a/src/app/Common/topic-badges-b/topic-badges-b.component.html
+++ b/src/app/Common/topic-badges-b/topic-badges-b.component.html
@@ -1,3 +1,3 @@
-<div class="d-flex" style="margin-bottom: 5px;" >
+<div class="d-flex flex-wrap" style="margin-bottom: 5px;">
   <span *ngFor="let top of topiclist" class="topiclist F12" style="margin-right:5px">{{top}}</span>
 </div>
