--- a/src/app/Institution/Page/follow-page/follow-page.component.css
+++ b/src/app/Institution/Page/follow-page/follow-page.component.css
@@ -1,13 +1,12 @@
 .NavButtons.Active {
-    background-color: #f0f0f0;
-    border-bottom: 2px solid #ff854c;
-    color: #ff854c;
-    font-weight: 600;
-  }
-  
-  .NavButtons {
-    padding: 10px;
-    background-color: #f0f0f0;
-    border: 0px;
-  }
-  
+  background-color: #ffffff;
+  border-bottom: 2px solid #247ba0;
+  color: #247ba0;
+  font-weight: 700;
+}
+
+.NavButtons {
+  padding: 10px;
+  background-color: #ffffff;
+  border: 0px;
+}
