--- a/src/app/Page/online-class-details-a/online-class-details-a.component.css
+++ b/src/app/Page/online-class-details-a/online-class-details-a.component.css
@@ -52,6 +52,18 @@ tr.tabletd td {
     font-size: 12px;
 }
 
+.tutorname {
+    font-size: 12px;
+    color: #3D3D3D;
+}
+
+.tutordescription {
+    color: #5c5c5c;
+    font-size: 10px;
+    margin-top: -5px;
+
+}
+
 .boxshadowcard {
     -webkit-box-shadow: 0px 0px 9px 1px rgba(237, 237, 237, 1);
     -moz-box-shadow: 0px 0px 9px 1px rgba(237, 237, 237, 1);
